crates/au-cli/tests/it/snapshots/it__scenarios__body-inline-code-reference.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 3,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 32,
                        "line_col": {
                          "end": {
                            "col": 33,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/body-inline-code-reference/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "body-inline-code-reference"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "body-inline-code-reference"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/body-inline-code-reference/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 32,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 25
            },
            "text": "Host"
          },
          {
            "content": "[:ref] [[the-target]]",
            "kind": "inline_code",
            "span": {
              "end": 185,
              "line_col": {
                "end": {
                  "col": 24,
                  "line": 11
                },
                "start": {
                  "col": 1,
                  "line": 11
                }
              },
              "start": 162
            }
          }
        ],
        "claim": [
          "host"
        ],
        "closure": [
          "host"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "ref",
            "origins": [
              {
                "name": "host",
                "origin_path": "<root>/scenarios/body-inline-code-reference/type/host.type.yaml",
                "required": true,
                "shape": "target*"
              }
            ],
            "required": true,
            "shape": "target*"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 185,
                        "line_col": {
                          "end": {
                            "col": 24,
                            "line": 11
                          },
                          "start": {
                            "col": 1,
                            "line": 11
                          }
                        },
                        "start": 162
                      },
                      "file": "<root>/scenarios/body-inline-code-reference/host.md"
                    },
                    "section_path": [
                      {
                        "index": 1,
                        "text": "Host"
                      }
                    ],
                    "surface": "body_inline_code",
                    "value": {
                      "anchor": null,
                      "block_id": null,
                      "kind": "reference",
                      "target": "the-target"
                    }
                  }
                ],
                "value": {
                  "anchor": null,
                  "block_id": null,
                  "kind": "reference",
                  "target": "the-target"
                }
              }
            ],
            "field": "ref"
          }
        ],
        "file": "<root>/scenarios/body-inline-code-reference/host.md",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 54,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 41
            },
            "text": "The target"
          }
        ],
        "claim": [
          "target"
        ],
        "closure": [
          "target"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "target",
                "origin_path": "<root>/scenarios/body-inline-code-reference/type/target.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 35,
                        "line_col": {
                          "end": {
                            "col": 19,
                            "line": 3
                          },
                          "start": {
                            "col": 7,
                            "line": 3
                          }
                        },
                        "start": 23
                      },
                      "file": "<root>/scenarios/body-inline-code-reference/the-target.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "the target"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "the target"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/body-inline-code-reference/the-target.md",
        "section_presence": null
      }
    ]
  }
}
